# plugins

./: .gitignore  CMakeLists.txt  NEWS  config.pri  m-keyboard.pro  maliit-plugins.pro
cmake/: FindPresage.cmake
debian/: changelog  control  rules
doc/: doxyfile.conf.in
fixture_virtualkeyboard/: fixture_virtualkeyboard.pro
m-keyboard/: m-keyboard.pro  mkeyboardhost.cpp  mkeyboardhost.h  mkeyboardplugin.cpp  mkeyboardsettings.h
m-keyboard/common/: abstractengine.h  cjklogicstatemachine.cpp  cjklogicstatemachine.h  common.pri  enginecjk.cpp  enginecjk.h  enginedefault.cpp  enginedefault.h  enginemanager.cpp  hwkbcharloops.h  hwkbcharloopsmanager.h  hwkbdeadkeymapper.h  keyboarddata.cpp  keyboarddata.h  keyevent.cpp  keyevent.h  keyeventhandler.cpp  keyeventhandler.h  layoutdata.cpp  layoutdata.h  layoutsmanager.cpp  layoutsmanager.h  mhardwarekeyboard.cpp  mhardwarekeyboard.h  namespace.h  reactionmappainter.cpp
m-keyboard/layouts/: ar.xml  bg_bg.xml  cs.xml  da.xml  de.xml  en_gb_default.xml  en_us_default.xml  es.xml  es_mx.xml  fi.xml  fr.xml  fr_ca.xml  hu.xml  id.xml  it.xml  ms.xml  nl.xml  no.xml  pl.xml  pt.xml  pt_br.xml  ro.xml  ru.xml  sk.xml  sv.xml  symbols.xml  symbols_ar.xml  symbols_cs_pl_sk.xml  symbols_en.xml  symbols_hu_ro_tr.xml  symbols_ru_uk.xml  tr.xml  uk.xml
m-keyboard/style/: mimgraphicsasset.cpp  mimgraphicsasset.h  mimkeystyle.cpp  mimkeystyle.h  mimstylablewidget.cpp  style-types.h  style-wrapper.h  style.pri
m-keyboard/theme/: libmeego-keyboard.css  theme.pri
m-keyboard/widgets/: abstractenginewidgethost.h  extendedkeys.cpp  extendedkeys.h  getcssproperty.h  handle.h  handlestyle.h  horizontalswitcher.cpp  horizontalswitcher.h  keyboardshadow.cpp  keyboardshadow.h  keyboardshadowstyle.h  keybuttonarea.cpp  keybuttonarea.h  keybuttonareastyle.h  magnifier.cpp  magnifierhost.cpp  magnifierhost.h  mimabstractkeyarea.cpp  mimabstractkeyarea.h  mimabstractkeyarea_p.h  mimabstractkeyareastyle.h  mimcorrectioncandidatecontainerstyle.h  mimcorrectioncandidateitem.cpp  mimcorrectioncandidateitem.h  mimcorrectioncandidateitemstyle.h  mimcorrectioncandidatewidget.cpp  mimcorrectioncandidatewidget.h  mimkey.cpp  mimkey.h  mimkeyarea.cpp  mimkeyarea.h  mimkeyarea_p.h  mimoverlay.cpp  mimoverlay.h  mimrootwidget.cpp  mimrootwidget.h  mimtoolbar.cpp  mimtoolbar.h  mimwordlist.cpp  mimwordlist.h  (+57 more)
maliit-keyboard/: config-plugin.pri  config.pri
maliit-keyboard/benchmark/: benchmark.pro
maliit-keyboard/data/: data.pro
maliit-keyboard/data/languages/: mk_mk.xml
maliit-keyboard/data/styles/: nokia-n9-droid.ini  nokia-n9.ini
maliit-keyboard/lib/: lib.pro
maliit-keyboard/lib/languages/: VirtualKeyboardLayout.dtd
maliit-keyboard/lib/logic/: abstracttexteditor.cpp  abstractwordengine.cpp  hitlogic.cpp  keyareaconverter.cpp  keyareaconverter.h  keyboardloader.cpp  languagefeatures.cpp  layouthelper.cpp  layoutupdater.cpp  layoutupdater.h  spellchecker.cpp  spellchecker.h  style.cpp  style.h  wordengine.cpp
maliit-keyboard/lib/models/: area.cpp  key.cpp  key.h  keyarea.cpp  label.cpp  layout.cpp  styleattributes.cpp  styleattributes.h  text.cpp  wordcandidate.cpp  wordribbon.cpp
maliit-keyboard/lib/parser/: layoutparser.cpp
maliit-keyboard/plugin/: canvas.cpp  canvas.h  editor.cpp  editor.h  inputmethod.cpp  inputmethod.h  maliitcontext.cpp  plugin.cpp  plugin.h  plugin.pro  surfaces.cpp  surfaces.h  updatenotifier.cpp  view.cpp  view.h
maliit-keyboard/tests/: common-check.pri
maliit-keyboard/tests/commit-string/: commit-string.pro  main.cpp
maliit-keyboard/tests/common/: inputmethodhostprobe.cpp  inputmethodhostprobe.h  utils-gui.cpp
maliit-keyboard/tests/language-layout-loading/: language-layout-loading.cpp
maliit-keyboard/tests/language-layout-switching/: language-layout-switching.cpp  language-layout-switching.pro
maliit-keyboard/tests/preedit-string/: preedit-string.cpp  preedit-string.pro
maliit-keyboard/tests/rendering/: main.cpp
maliit-keyboard/tests/repeat-backspace/: repeat-backspace.cpp  repeat-backspace.pro
maliit-keyboard/tests/ut_editor/: ut_editor.cpp
maliit-keyboard/view/: abstractfeedback.cpp  abstractfeedback.h  abstractsurface.cpp  abstractsurface.h  abstracttexteditor.cpp  glass.cpp  glass.h  nullfeedback.cpp  nullfeedback.h  renderer.cpp  renderer.h  setup.cpp  soundfeedback.cpp  soundfeedback.h  view.pro
maliit-keyboard/viewer/: dashboard.cpp  dashboard.h  main.cpp  viewer.pro
meego-keyboard-quick/qml/assets/: LandscapeVKB.qml  (+1 more)
nemo-keyboard/: AUTHORS  README  nemo-keyboard.qml
nemo-keyboard/qml/: nemo-keyboard.qml
tests/: common_check.pri  common_top.pri  tests.pro
tests/bm_mimabstractkeyarea/: bm_mimabstractkeyarea.cpp
tests/bm_painting/: bm_painting.cpp
tests/bm_symbols/: bm_symbols.cpp
tests/ft_mxkb/: ft_mxkb.cpp
tests/stubs/: fakegconf.h  mgconfitem_stub.h  minputmethodhoststub.cpp
tests/ut_horizontalswitcher/: mimtestkeyarea.cpp  mimtestkeyarea.h
tests/ut_hwkbcharloopsmanager/: ut_hwkbcharloopsmanager.cpp
tests/ut_keybuttonarea/: ut_keybuttonarea.cpp
tests/ut_layoutsmanager/: ut_layoutsmanager.cpp
tests/ut_mhardwarekeyboard/: ut_mhardwarekeyboard.cpp
tests/ut_mimabstractkeyarea/: ut_mimabstractkeyarea.cpp  ut_mimabstractkeyarea.h
tests/ut_mimcorrectionhost/: ut_mimcorrectionhost.cpp
tests/ut_mimfontpool/: ut_mimfontpool.cpp
tests/ut_mimkey/: ut_mimkey.cpp  ut_mimkey.h  ut_mimkey.pro
tests/ut_mimtoolbar/: ut_mimtoolbar.cpp
tests/ut_mkeyboardhost/: dummydriver_mkh.cpp  dummydriver_mkh.h  ut_mkeyboardhost.cpp  ut_mkeyboardhost.h
tests/ut_mkeyboardsettings/: ut_mkeyboardsettings.cpp
tests/ut_mkeyboardsettingswidget/: ut_mkeyboardsettingswidget.cpp
tests/ut_mtoolbarbutton/: ut_mtoolbarbutton.cpp
tests/ut_mvirtualkeyboard/: ut_mvirtualkeyboard.cpp  ut_mvirtualkeyboard.h
tests/ut_sharedhandlearea/: ut_sharedhandlearea.cpp
tests/ut_symbolview/: ut_symbolview.cpp  ut_symbolview.h
tests/ut_wordribbondialog/: ut_wordribbondialog.cpp
tests/ut_wordribbonhost/: ut_wordribbonhost.cpp
tests/ut_wordribbonitem/: ut_wordribbonitem.cpp  ut_wordribbonitem.h
(+31 files in other folders)
